# Course_work_4

./: README.md  main.py  pyproject.toml
src/: hh.py  jsonvacancystorage.py  parser.py  savejson.py  utils.py  vacancy.py  vacancystorage.py
tests/: test_hh.py  test_jsonvacancystorage.py  test_utils.py  test_vacancy.py
